WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
175338
Address flakiness related to download tests
https://bugs.webkit.org/show_bug.cgi?id=175338
Summary
Address flakiness related to download tests
Ryan Haddad
Reported
2017-08-08 13:04:59 PDT
LayoutTest imported/w3c/web-platform-tests/html/semantics/text-level-semantics/the-a-element/a-stringifier.html is a flaky failure
https://build.webkit.org/results/Apple%20El%20Capitan%20Release%20WK2%20(Tests)/r220403%20(3594)/results.html
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=imported%2Fw3c%2Fweb-platform-tests%2Fhtml%2Fsemantics%2Ftext-level-semantics%2Fthe-a-element%2Fa-stringifier.html
--- /Volumes/Data/slave/elcapitan-release-tests-wk2/build/layout-test-results/imported/w3c/web-platform-tests/html/semantics/text-level-semantics/the-a-element/a-stringifier-expected.txt +++ /Volumes/Data/slave/elcapitan-release-tests-wk2/build/layout-test-results/imported/w3c/web-platform-tests/html/semantics/text-level-semantics/the-a-element/a-stringifier-actual.txt @@ -1,3 +1,4 @@ +Download completed. PASS HTMLAnchorElement stringifier PASS HTMLAnchorElement stringifier 1
Attachments
Patch
(34.33 KB, patch)
2017-08-11 14:47 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2017-08-11 10:59:34 PDT
This is likely caused by a previous test. a-stringifier.html is unlikely to be the culprit here :(
Chris Dumez
Comment 2
2017-08-11 11:00:57 PDT
It is likely that a download layout test is not properly waiting for the download to finish to call finishJSTest().
Chris Dumez
Comment 3
2017-08-11 11:02:02 PDT
The culprit is likely: imported/w3c/web-platform-tests/html/semantics/text-level-semantics/the-a-element/a-download-click.html It clicks a download link and calls done() right away.
Chris Dumez
Comment 4
2017-08-11 11:06:29 PDT
It looks like download tests are currently expected to use: if (window.testRunner) testRunner.waitUntilDownloadFinished();
Chris Dumez
Comment 5
2017-08-11 14:42:51 PDT
***
Bug 168235
has been marked as a duplicate of this bug. ***
Chris Dumez
Comment 6
2017-08-11 14:47:19 PDT
Created
attachment 317967
[details]
Patch
Ryosuke Niwa
Comment 7
2017-08-12 14:29:00 PDT
Comment on
attachment 317967
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=317967&action=review
> Tools/ChangeLog:8 > + - Update WKTR so that the flag set by testRunner.waitUntilDownloadFinished()
We don't have the support for this feature in DRT?
Chris Dumez
Comment 8
2017-08-12 14:52:55 PDT
(In reply to Ryosuke Niwa from
comment #7
)
> Comment on
attachment 317967
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=317967&action=review
> > > Tools/ChangeLog:8 > > + - Update WKTR so that the flag set by testRunner.waitUntilDownloadFinished() > > We don't have the support for this feature in DRT?
No it was apparently only added to WK2.
WebKit Commit Bot
Comment 9
2017-08-12 14:58:49 PDT
Comment on
attachment 317967
[details]
Patch Clearing flags on attachment: 317967 Committed
r220626
: <
http://trac.webkit.org/changeset/220626
>
WebKit Commit Bot
Comment 10
2017-08-12 14:58:50 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 11
2017-08-12 14:59:13 PDT
<
rdar://problem/33865119
>
Chris Dumez
Comment 12
2017-08-14 10:09:49 PDT
Committed
r220703
: <
http://trac.webkit.org/changeset/220703
>
Chris Dumez
Comment 13
2017-08-14 10:11:02 PDT
Small follow-up in
https://trac.webkit.org/r220703
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug