Address flakiness related to download tests https://bugs.webkit.org/show_bug.cgi?id=175338

Reviewed by Ryosuke Niwa.

LayoutTests/imported/w3c:

Rebaseline several WPT tests now that download callbacks are no longer logged.

* web-platform-tests/html/semantics/embedded-content/the-area-element/area-download-click-expected.txt:
* web-platform-tests/html/semantics/text-level-semantics/the-a-element/a-download-click-expected.txt:

Tools:

- Update WKTR so that the flag set by testRunner.waitUntilDownloadFinished()
  is actually queried when a download completes. Previously, this would be
  identical to a call to testRunner.waitUntilDone() because any download
  completion would call testRunner.notifyDone().
- Disable logging of download callbacks by default and add a
  testRunner.setShouldLogDownloadCallbacks(true) API to allow tests to
  enable such logging.

* WebKitTestRunner/InjectedBundle/Bindings/TestRunner.idl:
* WebKitTestRunner/InjectedBundle/InjectedBundle.cpp:
(WTR::InjectedBundle::didReceiveMessageToPage):
* WebKitTestRunner/InjectedBundle/TestRunner.cpp:
(WTR::TestRunner::setShouldLogDownloadCallbacks):
* WebKitTestRunner/InjectedBundle/TestRunner.h:
* WebKitTestRunner/TestController.cpp:
(WTR::TestController::downloadDidStart):
(WTR::TestController::decideDestinationWithSuggestedFilename):
(WTR::TestController::downloadDidFinish):
(WTR::TestController::downloadDidFail):
(WTR::TestController::downloadDidCancel):
* WebKitTestRunner/TestController.h:
(WTR::TestController::setShouldLogDownloadCallbacks):
* WebKitTestRunner/TestInvocation.cpp:
(WTR::TestInvocation::didReceiveMessageFromInjectedBundle):

LayoutTests:

* TestExpectations:
Unmark several download tests as flaky.

* fast/dom/HTMLAnchorElement/anchor-download-synthetic-click.html:
* fast/dom/HTMLAnchorElement/anchor-download-user-triggered-synthetic-click.html:
* fast/dom/HTMLAnchorElement/anchor-download.html:
* fast/dom/HTMLAnchorElement/anchor-file-blob-convert-to-download.html:
* fast/dom/HTMLAnchorElement/anchor-file-blob-download-includes-backslash.html:
* fast/dom/HTMLAnchorElement/anchor-file-blob-download-includes-doublequote.html:
* fast/dom/HTMLAnchorElement/anchor-file-blob-download-includes-slashes.html:
* fast/dom/HTMLAnchorElement/anchor-file-blob-download-includes-unicode.html:
* fast/dom/HTMLAnchorElement/anchor-file-blob-download-no-extension.html:
* fast/dom/HTMLAnchorElement/anchor-file-blob-download.html:
* fast/dom/HTMLAnchorElement/anchor-nodownload-set.html:
* http/tests/download/anchor-download-attribute-content-disposition.html:
* http/tests/download/anchor-download-no-extension.html:
* http/tests/download/anchor-download-no-value.html:
* http/tests/download/area-download-expected.txt:
* http/tests/download/area-download.html:
* http/tests/security/anchor-download-allow-blob-expected.txt:
* http/tests/security/anchor-download-allow-blob.html:
* http/tests/security/anchor-download-allow-data-expected.txt:
* http/tests/security/anchor-download-allow-data.html:
* http/tests/security/anchor-download-allow-sameorigin.html:
Update download tests to explicitly enable download callbacks logging.


Canonical link: https://commits.webkit.org/192207@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@220626 268f45cc-cd09-0410-ab3c-d52691b4dbfc